google login works

--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -4,8 +4,7 @@
             <a class="navbar-brand">Project Manager</a>
         </div>
         <ul class="nav navbar-nav">
-            <li><a>Link 1</a></li>
-            <li><a>Link 2</a></li>
+            <app-login></app-login>
         </ul>
     </div>
 </nav>
