--- a/public/chat/src/app/login/login.component.html
+++ b/public/chat/src/app/login/login.component.html
@@ -1,1 +1,16 @@
-
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Sign In</h5>
+              <form class="form-signin">
+                <button (click)="loginWithGoogle()" class="btn btn-lg btn-google btn-block text-uppercase" type="button"><fa-icon [icon]="['fab', 'google']"></fa-icon> Sign in with Google</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
