--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
             <a class="navbar-brand">Project Manager</a>
         </div>
         <ul class="nav navbar-nav">
-            <app-login></app-login>
+            <!-- <app-login></app-login> -->
         </ul>
     </div>
 </nav>
