redirect after login and show username

--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand">Project Manager</a>
+            <a class="navbar-brand">Xenorb</a>
         </div>
         <ul class="nav navbar-nav">
-            <!-- <app-login></app-login> -->
+          <app-profile></app-profile>
         </ul>
     </div>
 </nav>
