added angular material to it

--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<!-- <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand">Xenorb</a>
@@ -7,4 +7,7 @@
           <app-profile></app-profile>
         </ul>
     </div>
-</nav>
+</nav> -->
+<mat-toolbar>
+    <span>My Application</span>
+  </mat-toolbar>
