--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -1,13 +1,5 @@
-<!-- <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand">Xenorb</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <app-profile></app-profile>
-        </ul>
-    </div>
-</nav> -->
-<mat-toolbar>
+<mat-toolbar color="primary">
     <span>My Application</span>
-  </mat-toolbar>
+    <span class="spacer"></span>
+    <app-profile></app-profile>
+</mat-toolbar>
