--- a/public/chat/src/app/navbar/navbar.component.html
+++ b/public/chat/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>My Application</span>
+    <span>Xenorb</span>
     <span class="spacer"></span>
     <app-profile></app-profile>
 </mat-toolbar>
