changed login to firebase, added firebase

--- a/public/chat/src/app/profile/profile.component.html
+++ b/public/chat/src/app/profile/profile.component.html
@@ -1,5 +1,5 @@
 <!-- <a mat-button [matMenuTriggerFor]="menu">{{user.name}}</a> -->
-<button class="logoutButton" [matMenuTriggerFor]="menu" mat-icon-button color="accent" [style.backgroundImage]="'url(' + user.photoUrl + ')'"> 
+<button class="logoutButton" [matMenuTriggerFor]="menu" mat-icon-button color="accent" [style.backgroundImage]="'url(' + user.photoURL + ')'"> 
     
 </button>
 <mat-menu #menu="matMenu">
